更新transport